# haskellbook

./: .gitignore  1  10.hs  11.hs  12.hs  13  15.hi  15.hs  15dataval.hs  15mem.hs  16.hs  17.hs  17ex.hs  18.hs  18fn.hs  2.hs  20.hs  21.hs  22.hs  23.hs  24.hs  4.hs  5.hs  6.hs  6typecheck.hs  7.hs  8.hs  9.hs  Dice.hs  Dice2.hs  SkiFree.hs  altparsing.hs  arith4.hs  badmonad.hs  badmonoid.hs  bt.hs  cipher.hs  dice.hs  fixerupper.hs  fizzbuzz.hs  (+41 more)
cipher/: ChangeLog.md  cipher.cabal  package.yaml  stack.yaml
cipher/app/: Main.hs
cipher/src/: Lib.hs
cipher/test/: Spec.hs
hangman/: hangman.cabal  stack.yaml
hangman/.stack-work/: stack.sqlite3
hangman/.stack-work/install/x86_64-linux-tinfo6/d054b65b23c7e8743af863bb0475ebf5080c74ff9cd69ae47646ca1c4acd83e6/8.8.4/pkgdb/: package.cache
hangman/src/: Hangman.hs  Main.hs
hangman/tests/: tests.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
orphan-instance/: Listy.hi  Listy.hs  ListyInstances.hi  ListyInstances.hs
shawty-prime/.stack-work/: stack.sqlite3
shawty-prime/.stack-work/ghci/c807475b/: cabal_macros.h
shawty-prime/app/: Main.hs
testing/: 14.hs  Addition.hs  addition.cabal  arbitrary.hs  quickcheck.hs  stack.yaml
testing/.stack-work/: stack.sqlite3
testing/.stack-work/ghci/1781451a/: cabal_macros.h
testing/.stack-work/ghci/75563b21/: cabal_macros.h
testing/.stack-work/install/x86_64-linux-tinfo6/ba8c15192970e99a572aa870ed6b2c90a64baa3affd72e3cc5c5bded0a4e7efa/8.8.4/pkgdb/: addition-0.1.0.0-42ImAsvR477EtaAHY6j0ki.conf  package.cache
(+2 files in other folders)
