name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
license: BSD3
license-file: LICENSE
category: Game
build-type: Simple
extra-source-files: data/dict.txt
cabal-version: >=1.10
library
  exposed-modules: Hangman
  hs-source-dirs: src
  build-depends:
    base >=4.7 && <5
    , containers 
    , random
    , split
  default-language: Haskell2010
executable hangman 
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base >=4.7 && <5
    , hangman
    , containers 
    , random
    , split
  default-language: Haskell2010
test-suite tests
  ghc-options: -Wall -fno-warn-orphans                                                                    
  type: exitcode-stdio-1.0                                                                                
  main-is: tests.hs                                                                                       
  hs-source-dirs: tests                                                                                   
  build-depends:                                                                                          
      base                                                                                                
    , containers
    , hangman
    , random
    , split
    , hspec
    , QuickCheck
  default-language: Haskell2010
